feat: Feature-Storage owner-isoliert vorbereiten
Co-Authored-By: OpenAI Codex <codex@openai.com>